--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -22,8 +22,17 @@ jobs:
         bundle install
         bundle exec rake
 
+    # ref: https://github.com/actions/starter-workflows/blob/master/ci/gem-push.yml
     - name: Publish to RubyGems
-      run: bundle exec rake release
+      run: |
+        mkdir -p $HOME/.gem
+        touch $HOME/.gem/credentials
+        chmod 0600 $HOME/.gem/credentials
+        printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
+        gem build *.gemspec
+        gem push *.gem
+      env:
+        GEM_HOST_API_KEY: ${{secrets.RUBYGEMS_AUTH_TOKEN}}
       if: github.event_name == 'release'
 
     - name: Notify status to slack
